--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.2.0",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
